syntax = "proto3";

package com.example.peopledensitymeasurementprototype.model.proto;

message SingleLocationData {
  int32 deviceId = 1;
  int32 timestamp = 2; // This will break in 2038
  int32 zoneId = 3;
  bool hemisphere = 4;
  int32 northing = 5;
  int32 easting = 6;
  int32 bearing = 7;
  int32 speed = 8;
  float accuracy = 9;
}